namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-df-bid-shiny-ws-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-df-bid-shiny-ws-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "data-platform-application-migration-support"
    cloud-platform.justice.gov.uk/application: "Df Bid Shiny Ws"
    cloud-platform.justice.gov.uk/owner: ": "
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/df-bid-shiny-ws"
    cloud-platform.justice.gov.uk/team-name: "df-bid-shiny-ws-admin-team"
    cloud-platform.justice.gov.uk/review-after: ""
